# python-task

./: README.md  Taskfile.yml  pyproject.toml
.github/workflows/: checks.yml  release.yml
example/: __main__.py  version.py
example/commands/: version.py
tests/: test_version.py
