[tool.poetry]
name = "example"
version = "0.0.0"
description = "This is an example project that does some things."
license = "BSD-2-Clause"
authors = [
	"Chris Gavin <chris@chrisgavin.me>",
]
repository = "https://github.com/chrisgavin/example/"

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"
pattern = "(?P<base>\\d+\\.\\d+\\.\\d+)"
dirty = true

[tool.poetry.dependencies]
python = ">=3.6"
versio = { version="*" }
importlib-metadata = { version="*" }

[tool.poetry.dev-dependencies]
flake8 = { version="*" }
mypy = { version="*" }
pytest = { version="*" }
pytest-github-actions-annotate-failures = { version = "*", optional = true }

[tool.poetry.extras]
github_actions = [
	"pytest-github-actions-annotate-failures",
]

[tool.poetry.scripts]
example = "example.__main__:main"

[build-system]
requires = [
	"poetry>=0.12",
	"poetry-dynamic-versioning",
]
build-backend = "poetry.masonry.api"
